After an evaluation, GNOME has moved from Bugzilla to GitLab. Learn more about GitLab.
No new issues can be reported in GNOME Bugzilla anymore.
To report an issue in a GNOME project, go to GNOME GitLab.
Do not go to GNOME Gitlab for: Bluefish, Doxygen, GnuCash, GStreamer, java-gnome, LDTP, NetworkManager, Tomboy.
Bug 661526 - g-c-c failed to show the WPA-EAP settings dialog if there is no active AP
g-c-c failed to show the WPA-EAP settings dialog if there is no active AP
Status: RESOLVED FIXED
Product: gnome-control-center
Classification: Core
Component: Network
3.2.x
Other Linux
: Normal normal
: ---
Assigned To: Control-Center Maintainers
Control-Center Maintainers
Depends on:
Blocks:
 
 
Reported: 2011-10-12 08:37 UTC by Gary Ching-Pang Lin
Modified: 2011-10-12 14:42 UTC
See Also:
GNOME target: ---
GNOME version: ---


Attachments
proposed patch (1.42 KB, patch)
2011-10-12 08:43 UTC, Gary Ching-Pang Lin
committed Details | Review

Description Gary Ching-Pang Lin 2011-10-12 08:37:34 UTC
Reproduce step:

1. Boot the system into gnome 3 non-fallback mode
2. Make sure that NM doesn't connect to any AP
3. Choose a WPA-EAP AP from the AP list

Expected result: g-c-c pops up the WPA-EAP settings dialog.
Actual result: g-c-c just showed the wireless panel and no settings dialog.

This bug is slightly different from the bug#648174. Even though I applied my patch for bug#648174, the settings dialog still didn't show up. If I connected to another WPA-PSK AP first, the dialog showed without any problem.
Comment 1 Gary Ching-Pang Lin 2011-10-12 08:43:41 UTC
Created attachment 198837 [details] [review]
proposed patch