network: show wireless dialog even if there is no active AP

The network panel ignored the request of showing the wireless
dialog if there is no active AP, and the user was not able to
set up the advanced wireless settings, such as WPA-EAP settings.

https://bugzilla.gnome.org/show_bug.cgi?id=661526